bias and weights
Added creating topology depending on bias and generating weights